--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -1,30 +1,25 @@
-name: Python Test
+name: Python Setup Workflow
 
-on: 
+on:
   push:
     branches:
-      - hamza-branch
+      - hamza_branch
 
 jobs:
-  build:
+  build-and-run:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-    - name: Install dependencies
-      run: |
-        sudo apt-get install python3-dev
-        python -m pip install --upgrade pip
-        pip install pylint black
-        pip install -r requirements.txt
-    - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py') --exit-zero 
-    - name: Run python black code formatter
-      uses: DataDog/action-py-black-formatter@v2.5
-      with:
-        fail_on_error: 'false'
-    - name: Build
-      run: |
-        python setup.py install
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Setup Python environment
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run basic example
+        run: flask run
