--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask
-Flask-DotEnv
-requests
-scikit-learn
+Flask==2.2.3
+Flask-DotEnv==0.1.2
+requests==2.28.2
+scikit-learn==1.0.2
+python-dotenv
